P0C/force-app/main/default/objects/Mail__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height in inches.</description>
    <label>Height</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>