P0C/force-app/main/default/objects/Mail__c/fields/Payout_Approval__c.field-meta.xml
<CustomField>
    <fullName>Payout_Approval__c</fullName>
    <label>Payout Approval</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>