P0C/force-app/main/default/objects/Mail__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Width in inches.</description>
    <label>Width</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>